# untitled_site

./: .gitignore  README.md
api/: Cargo.toml  Dockerfile
api/k8/: deploy.yaml  service.yaml  volume.yaml  volume_claim.yaml
api/src/: lib.rs  main.rs  routes.rs
api/src/auth/: configuration.rs  mod.rs  routes.rs
api/src/auth/hash/: mod.rs
api/src/auth/repository/: postgres.rs
api/src/auth/web/: request.rs  routes.rs
api/src/axum/: mod.rs
api/src/axum/extractors/: authenticate.rs
api/src/axum/layers/: mod.rs
api/src/files/: configuration.rs  mod.rs  routes.rs
api/src/files/persist/: disk.rs  error.rs  mod.rs
api/src/files/repository/: deadpool.rs  mod.rs  postgres.rs
api/src/files/web/: request.rs  response.rs  routes.rs
api/src/jwt/: claims_user.rs  configuration.rs  hmac.rs  mod.rs
api/src/projects/: configuration.rs  mod.rs  routes.rs
api/src/projects/repository/: deadpool.rs  mod.rs  postgres.rs
api/src/projects/web/: mod.rs  request.rs  response.rs  routes.rs
api/src/users/: configuration.rs  mod.rs  routes.rs
api/src/users/repository/: postgres.rs
api/src/util/: mod.rs
api/tf/: ecr.tf
auth/: Cargo.toml  (+1 more)
frontend/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  package-lock.json  package.json  pod.yaml
frontend/assets/css/: bootstrap.css  bootstrap.min.css
frontend/host/: Cargo.toml
frontend/host/src/: main.rs
frontend/k8/: deploy.yaml  ingress.yaml  service.yaml
frontend/src/: App.vue  api_error.rs  auth.js  content_pane.rs  lib.rs  main.js  main.rs  nav.rs  routes.rs
frontend/src/components/: Login.vue  Nav.vue  SignUp.vue
frontend/src/error_pages/: internal_server_error.rs  mod.rs  not_found.rs
frontend/src/home/: mod.rs
frontend/src/login/: api.rs  mod.rs
frontend/src/router/: index.js
frontend/src/scss/: custom.scss
frontend/src/sign_up/: api.rs  mod.rs
frontend/src/user/: api.rs  mod.rs
frontend/tf/: api_gw.tf  ecr.tf  lambda.tf  provider.tf
host/: Cargo.toml  Dockerfile
host/k8/: deploy.yaml  service.yaml
host/src/: lib.rs  main.rs  routes.rs
host/tf/: ecr.tf
(+150 files in other folders)
