[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-layer = "0.3.2"
axum = { version = "0.7.4", features = ["multipart"] }
bytes = "1.6.0"
log = "0.4.20"
env_logger = "0.11.3"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
deadpool = { version = "0.11.1", features = ["managed"] }
scrypt = "0.11.0"
sha2 = "0.10.8"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
file-format = { git = "https://github.com/chasb96/file-format.git" }