[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-layer = "0.3.2"
log = "0.4.20"
env_logger = "0.11.3"